<package format="3">
  <name>wallclimbingrobot</name>
  <version>1.0.0</version>
  <description>URDF package for Wallclimbingrobot robot with meshes, launch files, and config</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>

  <depend>rviz2</depend>

  <export>
  </export>
</package>